# QGC

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: sphinx.yml
dmvqc/models/: dmvqde_den_est_model.py
docs/source/: conf.py  index.rst  model1.rst  modules.rst
examples/: 1_D_quantum_var_density_classification_tensorcircuit_V043024.ipynb  2_D_quantum_var_density_classification_tensorcircuit_V020624.ipynb  2_D_quantum_var_density_estimation_tensorcircuit_V040124 copy.ipynb  2_D_quantum_var_density_estimation_tensorcircuit_V040124.ipynb  ConvNN_QGC_DiscThenGener_Mixed_28x28BinMNIST_TensorCircuit_V280824.ipynb  ConvNN_QGC_Mixed_28x28BinMNIST_TensorCircuit_V140824.ipynb  Final_2_D_quantum_var_density_estimation_tensorcircuit_V050824.ipynb  Final_copy.ipynb  QGC_library_GenAndDisc_Mixed_4x4BinMNIST_TensorCircuit_V120824.ipynb  QGC_library_GenAndDisc_Mixed_BinMNIST_TensorCircuit_V120824.ipynb  QMC_Mixed_QEFF_TenClassesMNIST_DiscThenGener_TensorCircuit_ConvNN_V270824.ipynb  QMC_Mixed_QEFF_TenClassesMNIST_TensorCircuit_ConvNN_V040824.ipynb  QMC_Mixed_QEFF_TenClassesMNIST_TensorCircuit_ConvNN_V150124.ipynb  QMC_Mixed_QEFF_ZZFM_SPRComp_TenClassesMNIST_DiscThenGener_TensorCircuit_ConvNN_V111224.ipynb  QMC_Mixed_QEFF_ZZFM_TenClassesMNIST_DiscThenGener_TensorCircuit_ConvNN_V051124.ipynb  dmkde_fixed_qaff.ipynb
src/: __init__.py
src/dmvqc/: __init__.py  script.py
src/dmvqc/data/: __init__.py  _arc_data.py  _dmkde_data.py  _potential_1_data.py  _star_eight_data.py
src/dmvqc/dmkde/: data.py  dmkde.py  tester.ipynb
src/dmvqc/misc/: __init__.py  _save_contour_plot.py
src/dmvqc/models/: __init__.py  _dmkde_classical_qeff.py  _dmkde_classical_qrff.py  _raw_kde.py  _vqkde_mixed_qrff.py  _vqkde_qeff.py  _vqkde_qrff.py
src/model/: model.py
src/vqkdc/classification/: __init__.py  _vqkdc_mixed_qeff.py  _vqkdc_mixed_qrff.py
src/vqkdc/data/: __init__.py  _dmkde_data.py
src/vqkdc/utils/: utils.py
src/vqkde/: __init__.py  script.py  script_estimation.py
src/vqkde/classification/: __init__.py  _dmkdc_classical_qeff.py  _dmkdc_classical_qrff.py  _dmkde_classical_qeff.py  _dmkde_classical_qrff.py  _kdc_classical.py  _vqkdc_mixed_qeff.py  _vqkdc_mixed_qrff.py
src/vqkde/data/: _arc_data.py  _load_data.py
src/vqkde/estimation/: _dmkde_fixed_qaff.py  _vqkde_mixed_qeff.py
src/vqkde/misc/: misc.py
src/vqkde/models/: __init__.py  _raw_kde.py
src/vqkde/utils/: __init__.py  utils.py
(+16 files in other folders)
