[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vqkde"
version = "0.1"

authors = [
  { name="Diego Useche" },
  { name="Sebastian Molina" }
]

dependencies = [
    'cirq==1.2.0',
    'grpcio-status',
    'ipykernel',
    'qiskit==0.44.1',
    'tensorcircuit==0.11.0',
    'tensorflow==2.13.0',
    'numpy==1.24.3',
    'scipy==1.11.2',
    'tensorflow-probability==0.21.0'
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.npy", "*.csv"]
