[metadata]

name = "dmvqc"
version = "0.1"

authors = [
  { name="Diego Useche" },
  { name="Sebastian Molina" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[options]

package_dir=
    =src

install_requires =
    cirq
    grpcio-status   
    ipykernel    
    qiskit         
    tensorcircuit  
    tensorflow
    numpy 
    scipy 

[options.packages.find]
where=src

[options.package_data]
* = README.md